--- a/cg2015/final_project/oggetti/lettino.html
+++ b/cg2015/final_project/oggetti/lettino.html
@@ -37,6 +37,11 @@
         
 	var bed = new THREE.Object3D();
 
+	var texture2 = THREE.ImageUtils.loadTexture("textures/beiges.jpg");
+        var stoffa = new THREE.MeshPhongMaterial( {color: 0xffffff});
+       	stoffa.map = texture2;
+
+
 	var hpiede = 0.5;
 	var piede_geo = new THREE.CylinderGeometry( 0.03, 0.03, hpiede , 32 );
 	var asse1_geo = new THREE.CylinderGeometry( 0.03, 0.03, 2 , 32 );
@@ -86,14 +91,14 @@
 	var materasso2_geo = new THREE.CylinderGeometry( 0.15, 0.15, 1.8 , 32 );
 	var materasso3_geo = new THREE.CylinderGeometry( 0.15, 0.15, 0.8 , 32 );
 	var materasso4_geo = new THREE.SphereGeometry( 0.15);
-	var materasso1 = new THREE.Mesh( materasso2_geo, materasso_mat );
-	var materasso2 = new THREE.Mesh( materasso2_geo, materasso_mat );
-	var materasso3 = new THREE.Mesh( materasso3_geo, materasso_mat );
-	var materasso4 = new THREE.Mesh( materasso3_geo, materasso_mat );
-	var materasso5 = new THREE.Mesh( materasso4_geo, materasso_mat );
-	var materasso6 = new THREE.Mesh( materasso4_geo, materasso_mat );
-	var materasso7 = new THREE.Mesh( materasso4_geo, materasso_mat );
-	var materasso8 = new THREE.Mesh( materasso4_geo, materasso_mat );
+	var materasso1 = new THREE.Mesh( materasso2_geo, stoffa );
+	var materasso2 = new THREE.Mesh( materasso2_geo, stoffa );
+	var materasso3 = new THREE.Mesh( materasso3_geo, stoffa);
+	var materasso4 = new THREE.Mesh( materasso3_geo, stoffa );
+	var materasso5 = new THREE.Mesh( materasso4_geo, stoffa );
+	var materasso6 = new THREE.Mesh( materasso4_geo, stoffa );
+	var materasso7 = new THREE.Mesh( materasso4_geo, stoffa );
+	var materasso8 = new THREE.Mesh( materasso4_geo,stoffa );
 	materasso1.rotation.z+=Math.PI/2;	
 	materasso2.rotation.z+=Math.PI/2;	
 	materasso1.position.z+=0.4;
@@ -106,7 +111,7 @@
 	materasso6.position.set(-0.9,0,0.4);
 	materasso7.position.set(0.9,0,-0.4);
 	materasso8.position.set(-0.9,0,-0.4);
-	var materasso = new THREE.Mesh( materasso_geo, materasso_mat );
+	var materasso = new THREE.Mesh( materasso_geo, stoffa );
 	materasso.position.set(1,0.4,0.5);
 	materasso.add(materasso1);
 	materasso.add(materasso2);
@@ -213,11 +218,22 @@ var extrudeSettings = {
 	testiera_ant.add(testiera_ant2);
 	testiera_post.add(testiera_post2);
 
-	var testiera_geo6 = new THREE.BoxGeometry( 2, 0.7 , 0.06 );
-	var testiera2 = new THREE.Mesh( testiera_geo6, material  ) ;
-	testiera2.rotation.y+=Math.PI/2;
-	testiera2.position.set(-0.2,0.8,0.5);
+	var texture1 = THREE.ImageUtils.loadTexture("textures/trave2.jpg");
+        var testiera_mat = new THREE.MeshPhongMaterial( {color: 0xffffff});
+       	testiera_mat.map = texture1;
 
+	var testiera_geo6 = new THREE.BoxGeometry( 2, 0.7 , 0.06 );	
+	var testiera2 = new THREE.Mesh( testiera_geo6, testiera_mat ) ;
+	testiera2.rotation.y+=Math.PI/2;
+	testiera2.position.set(-0.2,1.3,0.5);
+
+/*	var testiera_geo7 = new THREE.CylinderGeometry( 0.135, 0.135, 0.06 , 32 );
+	testiera7 = new THREE.Mesh( testiera_geo7, material  ) 	;
+	testiera7.rotation.x+=Math.PI/2;
+	testiera7.position.z+=0.03;
+	testiera7.position.y+=0.4;
+	testiera7.position.x+=0.1;
+	testiera_ant.add(testiera7);*/
 	bed.add(piede1);
 	bed.add(piede2);
 	bed.add(piede3);
@@ -230,6 +246,8 @@ var extrudeSettings = {
 	bed.add(testiera_ant);
 	bed.add(testiera_post);
 	bed.add(testiera2);
+	
+	
 	
 	scene.add(bed);
 	//return bed;
