--- a/cg2015/final_project/oggetti/poltrona.html
+++ b/cg2015/final_project/oggetti/poltrona.html
@@ -45,11 +45,11 @@
 	bracciolo_geo.lineTo( 0, 0);
 
 	var material = new THREE.MeshLambertMaterial( {color: 0xdcdcdc} );
-	var texture = THREE.ImageUtils.loadTexture("textures/verde.jpg");
+	var texture = THREE.ImageUtils.loadTexture("textures/tessuto_verde.jpg");
 	material.map = texture;
 
 	var material2 = new THREE.MeshLambertMaterial( {color: 0x0000dc} );
-	var texture2 = THREE.ImageUtils.loadTexture("textures/verde.jpg");
+	var texture2 = THREE.ImageUtils.loadTexture("textures/tessuto_verde.jpg");
 	material2.map = texture2;
 
 	var material3 = new THREE.MeshLambertMaterial( {color: 0x0000dc} );
@@ -57,8 +57,15 @@
 	material3.map = texture3;
 
 	var material4 = new THREE.MeshLambertMaterial( {color: 0x0000dc} );
-	var texture4 = THREE.ImageUtils.loadTexture("textures/verde.jpg");
+	var texture4 = THREE.ImageUtils.loadTexture("textures/tessuto_verde.jpg");
 	material4.map = texture4;
+	var texture5 = THREE.ImageUtils.loadTexture("textures/tessuto_verde.jpg");
+        texture5.wrapS = THREE.RepeatWrapping;
+        texture5.wrapT = THREE.RepeatWrapping;
+        var mat5 = new THREE.MeshPhongMaterial();
+        mat5.map = texture5;
+	mat5.map.repeat.set(5,1);
+
 
 	var extrudeSettings = {
 	amount:0.1,
@@ -66,8 +73,8 @@
 	};
 
 	var bracciolo_geo2 = new THREE.ExtrudeGeometry( bracciolo_geo, extrudeSettings );
-	var bracciolo1 = new THREE.Mesh( bracciolo_geo2, material  ) ;
-	var bracciolo2 = new THREE.Mesh( bracciolo_geo2, material  ) ;
+	var bracciolo1 = new THREE.Mesh( bracciolo_geo2, mat5  ) ;
+	var bracciolo2 = new THREE.Mesh( bracciolo_geo2, mat5  ) ;
 	//var bracciolo3 = new THREE.Mesh( bracciolo_geo, material  ) ;
 	//var bracciolo4 = new THREE.Mesh( bracciolo_geo, material  ) ;	
 	//var bracciolo5 = new THREE.Mesh( bracciolo_geo, material  ) ;
@@ -78,11 +85,11 @@
 	//bracciolo4.position.z+=1.592;
 	
 	var schienale_geo = new THREE.BoxGeometry( 0.2,1,1.2 );
-	var schienale = new THREE.Mesh( schienale_geo, material  ) ;
+	var schienale = new THREE.Mesh( schienale_geo, mat5  ) ;
 
 	var cuscino_geo = new THREE.BoxGeometry( 1,0.2,0.8 );
 	var cuscino_geo2 = new THREE.BoxGeometry( 0.8,0.8,0.2 );
-	var base = new THREE.Mesh( cuscino_geo, material  ) ;
+	var base = new THREE.Mesh( cuscino_geo, mat5  ) ;
 	base.rotation.y+=Math.PI/2;
 	base.position.x+=0.4;
 	base.position.z+=1.1;
@@ -92,13 +99,13 @@
 	base2.rotation.y+=Math.PI/2;
 	base2.position.x+=0.55;
 	base2.position.z+=1.1;
-	base2.position.y-=0.02;
-	var cuscino1 = new THREE.Mesh( cuscino_geo, material2  ) ;
+	base2.position.y-=0.025;
+	var cuscino1 = new THREE.Mesh( cuscino_geo, mat5  ) ;
 	cuscino1.rotation.y+=Math.PI/2;
 	cuscino1.position.x+=0.45;
 	cuscino1.position.z+=1.1;
 	cuscino1.position.y+=0.2;
-	var cuscino2 = new THREE.Mesh( cuscino_geo2, material2  ) ;
+	var cuscino2 = new THREE.Mesh( cuscino_geo2, mat5  ) ;
 	cuscino2.rotation.y+=Math.PI/2;
 	
 	var piede_geo = new THREE.CylinderGeometry( 0.09, 0.02, 0.4 , 4 );
@@ -112,7 +119,7 @@
 	piede4.position.set(0.15,0,0.6);
 
 	var cuscino3_geo = new THREE.CylinderGeometry( 0.1, 0.1, 0.7 , 32 );
-	var cuscino3 = new THREE.Mesh( cuscino3_geo, material4  ) ;
+	var cuscino3 = new THREE.Mesh( cuscino3_geo, mat5  ) ;
 	cuscino3.rotation.x+=Math.PI/2;
 	cuscino3.position.x+=0.7;
 	cuscino3.position.z+=1.1;
